<resources>
    <string name="app_name">KEJApp</string>
    <string name="title_activity_maps">Map</string>

    <string name="technicalInfosLabel">Informacje techniczne</string>

    <string name="entranceWidthLabel">Szerokość wejścia</string>
    <string name="entranceDepthLabel">Głębokość wejścia</string>
    <string name="maxVesselSubmersionLabel">Maksymalne dozw. zanurzenie</string>
    <string name="maxVesselLengthLabel">Maksymalna dozw. długość</string>
    <string name="maxVesselWidthLabel">Maksymalna dozw. szerokość</string>
    <string name="dailyWaterLevelUpLabel">Poziom przypływu</string>
    <string name="dailyWaterLevelDownLabel">Poziom odpływu</string>

    <string name="prices">Ceny</string>

    <string name="showerPriceLabel">Prysznic</string>
    <string name="bathroomPriceLabel">Łazienka</string>
    <string name="electricityPriceLabel">Prąd</string>
    <string name="currentWaterPriceLabel">Woda bieżąca</string>
    <string name="toiletEmptyingPriceLabel">Opróżnianie toalety</string>

    <string name="portInfoButton">Zarezerwuj keję</string>

    <string name="portNameTextView">Nazwa portu</string>
    <string name="latitudeTextView">Szerokość geogr.</string>
    <string name="longitudeTextView">Długość geogr.</string>
    <string name="pierTextView">Pomost</string>
    <string name="quayNumberTextView">Numer keji</string>
    <string name="maxVesselLengthTextView">Max. dozw. długość łódki</string>
    <string name="maxVesselWidthTextView">Max. dozw. szerokość łódki</string>
    <string name="maxVesselSubmersionTextView">Max. dozw. poziom zanurzenia</string>
    <string name="mooringAvailableTextView">Dostępność muringu</string>
    <string name="mooringTypeTextView">Typ muringu</string>
    <string name="buoyAvailableTextView">Dostępność boji</string>
    <string name="anchorRequiredTextView">Wymagana kotwica</string>
    <string name="electricityAvailableTextView">Dostępność prądu</string>
    <string name="currentWaterAvailableTextView">Bieżąca woda</string>
    <string name="calculatedPriceTextView">Wyliczona sum. cena</string>
    <string name="notesTextView">Komentarz</string>

    <string name="quayOrderButton">Rezerwuj keję!</string>
    <string name="quayBackButton">Powrót</string>
    <string name="reservationBackButton">Powrót</string>
    <string name="reservationRevokeButton">Odwołaj rezerwację</string>


</resources>
